# F1_Steamlit_App

./: .env  Home.py  agent_test.py  load_chromadb.py  pyproject.toml  requirements.txt  streamlit_app.ipynb
.streamlit/: config.toml
data/: Structured_Data.db  monza_data.xlsx
data/monza_2024_corpus/: 2024_Italian_GP.txt  Eight_things_we_learned_from_the_2024_Italian_Grand_Prix.txt  F1_2024_Italian_Grand_Prix_weather_forecast_-_latest_today_f.txt  F1_Italian_Grand_Prix_weather_2024_-_latest_forecast_today_f.txt  F1_drivers_voice_concerns_over_changes_to_“old-school”_Monza.txt  Formula_1_Time_schedule__F1Italy.com.txt  Italian_Grand_Prix_Driver_Ratings_2024.txt  Italy.txt  Italy_F1_Track_&_Grandstand_Guide__Monza_Circuit__Monza_Ra.txt  Leclerc_thrills_the_Tifosi_as_he_triumphs_at_Monza_ahead_of_.txt  Monza_tire_analysis_Ferrari_SF-24_wins_by_managing_graining.txt  Norris_Piastri's_Monza_F1_pass_way_too_close_for_comfort.txt  Norris_seals_pole_position_ahead_of_Piastri_at_Monza_as_McLa.txt  Race_Ready_Monza_F1_Schedule_and_Travel_Guide_2024.txt  The_history_of_the_Monza_racetrack,_the_temple_of_speed.txt  Track_Info_–_Monza_–_iGPFun.txt  What_the_teams_said_–_Qualifying_in_Italy.txt  What_the_teams_said_–_Race_day_in_Italy.txt  What_we_learned_from_Friday_practice_at_the_Italian_GP.txt  chroma.sqlite3  “Nobody’s_perfect”_–_but_Leclerc_came_close_with_final_Monza.txt
pages/: 1_Dashboard.py  2_Chatbot.py  3_Data_Editor.py
utils/: agent_helpers.py
