[tool.poetry]
name = "profsandman_agents"
version = "0.1.0"
description = "Base code for AIM 4420 LLM-based agents"
authors = ["Hunter Sandidge <Hunter.Sandidge@Marquette.edu>"]
license = "MIT"
readme = "README.md"
 
[tool.poetry.dependencies]
python =  ">3.12,<4.0"
nltk = "^3.9.1"
tiktoken = "^0.9.0"
llama-index = "^0.12.23"
openai = "^1.65.5"
pdfplumber = "^0.11.5"
python-pptx = "^1.0.2"
python-docx = "^1.1.2"
ipykernel = "^6.29.5"
tqdm = "^4.67.1"
sentence-transformers = "^3.4.1"
chromadb = "^0.6.3"
sqlalchemy = "^2.0.39"
fastf1 = "^3.5.3"
 
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 